# westronize

./: .gitignore  README.md  pyproject.toml
tests/: conftest.py  test_items.py  test_skills.py  test_traits.py
westronize/: cli.py
westronize/modules/: base.py  items.py  skills.py  traits.py
